# program_starter

./: CMakeLists.txt  base-kit.cmake
include/: includes.h
src/: starter.c
src/help_programs/: find_lib.c  get_libs.c  read_config.c
tests/test1/: CMakeLists.txt
tests/test1/lib/: lib_1.c  lib_1.h  lib_2.c  lib_2.h
tests/test1/program/: program_1.c  program_1.h  program_2.c
